--- a/Leader/View/Base.lproj/Main.storyboard
+++ b/Leader/View/Base.lproj/Main.storyboard
@@ -119,13 +119,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kti-6Q-V9l">
-                                <rect key="frame" x="20" y="488" width="294" height="24"/>
+                                <rect key="frame" x="20" y="488" width="251" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdQ-nb-WCG">
-                                <rect key="frame" x="319" y="488" width="36" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdQ-nb-WCG">
+                                <rect key="frame" x="276" y="488" width="36" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -145,6 +145,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gow-Bj-7dc">
+                                <rect key="frame" x="317" y="488" width="38" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.0078431372549019607" green="0.17254901960784313" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -152,15 +158,18 @@
                             <constraint firstItem="b8G-ES-y0z" firstAttribute="trailing" secondItem="PGK-vl-MeL" secondAttribute="trailing" constant="15" id="7fr-PQ-I4c"/>
                             <constraint firstItem="daO-oF-5qk" firstAttribute="top" secondItem="PGK-vl-MeL" secondAttribute="bottom" constant="65" id="Cok-pI-wE9"/>
                             <constraint firstItem="b8G-ES-y0z" firstAttribute="bottom" secondItem="daO-oF-5qk" secondAttribute="bottom" constant="65" id="Csw-ny-FCu"/>
-                            <constraint firstItem="b8G-ES-y0z" firstAttribute="trailing" secondItem="UdQ-nb-WCG" secondAttribute="trailing" constant="20" id="Cxy-vx-00e"/>
                             <constraint firstItem="b8G-ES-y0z" firstAttribute="trailing" secondItem="mMb-I0-Uzm" secondAttribute="trailing" constant="20" id="Grf-ap-QKH"/>
                             <constraint firstItem="Kti-6Q-V9l" firstAttribute="top" secondItem="PGK-vl-MeL" secondAttribute="bottom" constant="20" id="L04-NZ-y2q"/>
                             <constraint firstItem="cDE-ST-83W" firstAttribute="leading" secondItem="b8G-ES-y0z" secondAttribute="leading" constant="15" id="PPB-g5-KzJ"/>
                             <constraint firstItem="b8G-ES-y0z" firstAttribute="bottom" secondItem="PGK-vl-MeL" secondAttribute="bottom" constant="150" id="RsQ-6O-VsE"/>
+                            <constraint firstItem="gow-Bj-7dc" firstAttribute="top" secondItem="PGK-vl-MeL" secondAttribute="bottom" constant="20" id="b3M-DF-pNB"/>
                             <constraint firstItem="b8G-ES-y0z" firstAttribute="bottom" secondItem="mMb-I0-Uzm" secondAttribute="bottom" constant="15" id="bNM-Lg-oJ0"/>
                             <constraint firstItem="b8G-ES-y0z" firstAttribute="trailing" secondItem="cDE-ST-83W" secondAttribute="trailing" constant="15" id="haJ-Me-jgb"/>
                             <constraint firstItem="mMb-I0-Uzm" firstAttribute="top" secondItem="UdQ-nb-WCG" secondAttribute="bottom" constant="5" id="hd6-un-LgE"/>
+                            <constraint firstItem="gow-Bj-7dc" firstAttribute="leading" secondItem="UdQ-nb-WCG" secondAttribute="trailing" constant="5" id="l2g-xv-6UX"/>
                             <constraint firstItem="mMb-I0-Uzm" firstAttribute="top" secondItem="Kti-6Q-V9l" secondAttribute="bottom" constant="5" id="on2-Gm-FBj"/>
+                            <constraint firstItem="b8G-ES-y0z" firstAttribute="trailing" secondItem="gow-Bj-7dc" secondAttribute="trailing" constant="20" id="pPg-M1-d6X"/>
+                            <constraint firstItem="mMb-I0-Uzm" firstAttribute="top" secondItem="gow-Bj-7dc" secondAttribute="bottom" constant="5" id="qDb-N6-oaE"/>
                             <constraint firstItem="cDE-ST-83W" firstAttribute="top" secondItem="PGK-vl-MeL" secondAttribute="bottom" constant="15" id="r9K-ji-Zg1"/>
                             <constraint firstItem="PGK-vl-MeL" firstAttribute="top" secondItem="b8G-ES-y0z" secondAttribute="top" constant="15" id="rmm-HQ-Fdu"/>
                             <constraint firstItem="Kti-6Q-V9l" firstAttribute="leading" secondItem="b8G-ES-y0z" secondAttribute="leading" constant="20" id="spA-bA-OvC"/>
@@ -182,11 +191,12 @@
                         <outlet property="descriptionLabel" destination="mMb-I0-Uzm" id="aM9-Fn-TMb"/>
                         <outlet property="nameLabel" destination="Kti-6Q-V9l" id="dQV-Bi-cTF"/>
                         <outlet property="noEventsLabel" destination="daO-oF-5qk" id="1Vg-Mw-p41"/>
+                        <outlet property="timeLabel" destination="gow-Bj-7dc" id="Tj2-62-SWD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M4P-gx-aYF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1535" y="-174"/>
+            <point key="canvasLocation" x="1533.5999999999999" y="-174.06296851574214"/>
         </scene>
         <!--TabBarNavigation-->
         <scene sceneID="xlC-8G-mio">
@@ -944,14 +954,14 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="questionCell" id="eZb-DB-sbi" customClass="QuestionCell" customModule="Leader" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="43"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eZb-DB-sbi" id="aab-Nr-gh8">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fgk-YV-Qfm">
-                                                    <rect key="frame" x="15" y="11" width="345" height="21.5"/>
+                                                    <rect key="frame" x="15" y="11" width="345" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
