--- a/Leader/View/SignUp.storyboard
+++ b/Leader/View/SignUp.storyboard
@@ -397,10 +397,6 @@
                                     <outlet property="delegate" destination="562-GF-bu2" id="Wif-1Y-OQf"/>
                                 </connections>
                             </textField>
-                            <pickerView hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="alA-Mw-6bC">
-                                <rect key="frame" x="46" y="154" width="269" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="0.066666666669999999" green="0.31764705879999999" blue="0.45098039220000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -543,6 +539,6 @@
         <image name="Leader3" width="850" height="350"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7v5-0z-LmG"/>
+        <segue reference="1hT-wV-cpB"/>
     </inferredMetricsTieBreakers>
 </document>
