--- a/Leader/View/SignUp.storyboard
+++ b/Leader/View/SignUp.storyboard
@@ -452,44 +452,47 @@
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Adl-19-thr">
                                 <rect key="frame" x="50" y="100" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="School Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tec-wF-Ayz">
                                 <rect key="frame" x="50" y="149" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Advisor Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5zC-dC-biR">
                                 <rect key="frame" x="50" y="198" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Grade" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hgJ-W3-MQK">
                                 <rect key="frame" x="50" y="247" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RGs-Qa-gGd">
                                 <rect key="frame" x="50" y="296" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nWU-Mb-N8h">
                                 <rect key="frame" x="50" y="345" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X5B-Jx-fvq">
-                                <rect key="frame" x="150" y="394" width="75" height="33"/>
+                                <rect key="frame" x="130" y="399" width="115" height="40"/>
                                 <color key="backgroundColor" red="1" green="0.85937339069999996" blue="0.011647096839999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="cp8-70-hti"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" title="Join">
                                     <color key="titleColor" red="0.084196783819999996" green="0.084196783819999996" blue="0.084196783819999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
                                     <action selector="joinFBLAPressed:" destination="A2c-CS-DHz" eventType="touchUpInside" id="XAo-BX-UzY"/>
-                                    <segue destination="rNB-jg-Nxu" kind="show" id="1hT-wV-cpB"/>
+                                    <segue destination="rNB-jg-Nxu" kind="show" identifier="goToTabs" id="1hT-wV-cpB"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -500,17 +503,17 @@
                             <constraint firstItem="hgJ-W3-MQK" firstAttribute="top" secondItem="5zC-dC-biR" secondAttribute="bottom" constant="15" id="6Sl-0s-6MS"/>
                             <constraint firstItem="5zC-dC-biR" firstAttribute="top" secondItem="Tec-wF-Ayz" secondAttribute="bottom" constant="15" id="6cf-Al-4sv"/>
                             <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="5zC-dC-biR" secondAttribute="trailing" constant="50" id="DKH-7z-0Pd"/>
-                            <constraint firstItem="X5B-Jx-fvq" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="150" id="Dx3-FM-188"/>
+                            <constraint firstItem="X5B-Jx-fvq" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="130" id="Dx3-FM-188"/>
                             <constraint firstItem="Adl-19-thr" firstAttribute="top" secondItem="4kc-hh-4cX" secondAttribute="top" constant="100" id="HWP-Gy-dRy"/>
                             <constraint firstItem="5zC-dC-biR" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="KL2-Ul-msj"/>
-                            <constraint firstItem="X5B-Jx-fvq" firstAttribute="top" secondItem="nWU-Mb-N8h" secondAttribute="bottom" constant="15" id="RWG-OM-U7N"/>
+                            <constraint firstItem="X5B-Jx-fvq" firstAttribute="top" secondItem="nWU-Mb-N8h" secondAttribute="bottom" constant="20" id="RWG-OM-U7N"/>
                             <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="Adl-19-thr" secondAttribute="trailing" constant="50" id="bJc-Sk-8hg"/>
                             <constraint firstItem="nWU-Mb-N8h" firstAttribute="top" secondItem="RGs-Qa-gGd" secondAttribute="bottom" constant="15" id="bZr-fr-MsC"/>
                             <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="Tec-wF-Ayz" secondAttribute="trailing" constant="50" id="bdH-IE-HBT"/>
                             <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="nWU-Mb-N8h" secondAttribute="trailing" constant="50" id="dNy-gS-dSa"/>
                             <constraint firstItem="hgJ-W3-MQK" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="e6x-d2-H4c"/>
                             <constraint firstItem="Adl-19-thr" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="f05-3e-maw"/>
-                            <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="X5B-Jx-fvq" secondAttribute="trailing" constant="150" id="gkI-Iy-6eq"/>
+                            <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="X5B-Jx-fvq" secondAttribute="trailing" constant="130" id="gkI-Iy-6eq"/>
                             <constraint firstItem="4kc-hh-4cX" firstAttribute="trailing" secondItem="hgJ-W3-MQK" secondAttribute="trailing" constant="50" id="kkK-mf-zdj"/>
                             <constraint firstItem="Tec-wF-Ayz" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="mJh-6U-eTd"/>
                             <constraint firstItem="nWU-Mb-N8h" firstAttribute="leading" secondItem="4kc-hh-4cX" secondAttribute="leading" constant="50" id="nXe-Ti-tu2"/>
